--- a/Image Slider #1 - HTML & CSS/index.html
+++ b/Image Slider #1 - HTML & CSS/index.html
@@ -5,9 +5,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Image Slider #1 - HTML & CSS</title>
+
+    <!-- Image Slider #1 - HTML & CSS - CSS File  -->
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- Slider -->
+    <div class="slider">
+        <div class="slider-1">
+            <img src="images/slider 1.jpg" alt="Slider 1">
+            <div class="text">
+                <h1>Nature is the place of heaven</h1>
+                <span></span>
+                <p>
+                    ipsum dolor sit amet consectetur adipisicing elit.
+                    Quisquam, quidem.
+                </p>
+            </div>
+        </div>
+
+        <div class="slider-2">
+            <img src="images/slider 2.jpg" alt="Slider 1">
+            <div class="text">
+                <h1>Most peaceful place in human bean</h1>
+                <span></span>
+                <p>
+                    ipsum dolor sit amet consectetur adipisicing elit.
+                    Quisquam, quidem.
+                </p>
+            </div>
+        </div>
+
+        <div class="slider-3">
+            <img src="images/slider 3.jpg" alt="Slider 1">
+            <div class="text">
+                <h1>Nature is the place of heaven</h1>
+                <span></span>
+                <p>
+                    ipsum dolor sit amet consectetur adipisicing elit.
+                    Quisquam, quidem.
+                </p>
+            </div>
+        </div>
+
+        <div class="slider-4">
+            <img src="images/slider 4.jpg" alt="Slider 1">
+            <div class="text">
+                <h1>Nature is the place of heaven</h1>
+                <span></span>
+                <p>
+                    ipsum dolor sit amet consectetur adipisicing elit.
+                    Quisquam, quidem.
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
