Added Style to slider # overflow✅

--- a/Image Slider #1 - HTML & CSS/index.html
+++ b/Image Slider #1 - HTML & CSS/index.html
@@ -9,7 +9,7 @@
     <title>Image Slider #1 - HTML & CSS</title>
 
     <!-- Image Slider #1 - HTML & CSS - CSS File  -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
