--- a/1 - Active Link on Page Scroll using Javascript/index.html
+++ b/1 - Active Link on Page Scroll using Javascript/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Import CSS file -->
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link type="text/css" rel="stylesheet" href="style.css">
+    <title>Scrollspy JavaScripy</title>
 </head>
 <body>
+    <header>
+        <a href="#" class="logo">Logo</a>
+
+        <nav>
+            <a href="#home" style="--clr:#ff4d4d;">Home</a>
+            <a href="#about" style="--clr:#c56cf0;">About</a>
+            <a href="#service" style="--clr:#ffeaa7;">Service</a>
+            <a href="#portfolio" style="--clr:#17c0eb;">Portfolio</a>
+            <a href="#contact" style="--clr:#fd79a8;">Contact</a>
+        </nav>
+    </header>
+
+    <section id="home" style="--clr:#ff4d4d;">Home</section>
+    <section id="about" style="--clr:#c56cf0;">About</section>
+    <section id="service" style="--clr:#ffeaa7;">Service</section>
+    <section id="portfolio" style="--clr:#17c0eb;">Portfolio</section>
+    <section id="contact" style="--clr:#fd79a8;">Contact</section>
     
 </body>
 </html>
