--- a/1 - Active Link on Page Scroll using Javascript/index.html
+++ b/1 - Active Link on Page Scroll using Javascript/index.html
@@ -12,11 +12,11 @@
         <a href="#" class="logo">Logo</a>
 
         <nav>
-            <a href="#home" style="--clr:#ff4d4d;">Home</a>
-            <a href="#about" style="--clr:#c56cf0;">About</a>
-            <a href="#service" style="--clr:#ffeaa7;">Service</a>
-            <a href="#portfolio" style="--clr:#17c0eb;">Portfolio</a>
-            <a href="#contact" style="--clr:#fd79a8;">Contact</a>
+            <a href="#home" style="--clr:#ff4d4d;" class="active">Home</a>
+            <a href="#about" style="--clr:#c56cf0;" class="active">About</a>
+            <a href="#service" style="--clr:#ffeaa7;" class="active">Service</a>
+            <a href="#portfolio" style="--clr:#17c0eb;" class="active">Portfolio</a>
+            <a href="#contact" style="--clr:#fd79a8;" class="active">Contact</a>
         </nav>
     </header>
 
@@ -26,5 +26,8 @@
     <section id="portfolio" style="--clr:#17c0eb;">Portfolio</section>
     <section id="contact" style="--clr:#fd79a8;">Contact</section>
     
+
+    <!-- Import JS file -->
+    <script src="main.js"></script>
 </body>
 </html>
