Banner structure and styles complete

--- a/2 - Netflix Landing Page Website ( Mulan )/index.html
+++ b/2 - Netflix Landing Page Website ( Mulan )/index.html
@@ -26,5 +26,23 @@
             <i class="bi bi-search"></i>
         </div>
     </header>
+    <div class="banner">
+        <img src="images/bg.jpg" alt="Mulan Banner" class="bg">
+        <div class="content">
+            <img src="images/name.png" alt="movieTitle" class="movieTitle">
+            <h4>
+                <span>2020</span>
+                <span><i>12+</i></span>
+                <span>1h 55min</span>
+                <span>Action</span>
+            </h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis, distinctio minima aliquid omnis dolore, nam cum quasi iusto cupiditate accusantium consequuntur nihil adipisci at ut optio commodi natus, quia non.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis, distinctio minima aliquid omnis dolore, nam cum quasi iusto cupiditate accusantium consequuntur nihil adipisci at ut optio commodi natus, quia non.</p>
+            <div class="buttons">
+                <a href="#"><i class="bi bi-play-fill"></i>Play</a>
+                <a href="#"><i class="bi bi-plus-lg"></i>My List</a>
+                
+            </div>
+        </div>
+    </div>
 </body>
 </html>
