Add trailer vedio and setup and style trailer watch button and vedio

--- a/2 - Netflix Landing Page Website ( Mulan )/index.html
+++ b/2 - Netflix Landing Page Website ( Mulan )/index.html
@@ -43,6 +43,13 @@
                 
             </div>
         </div>
+        <a href="#" class="play"><img src="images/play.png" alt="play">Watch Trailer</a>
     </div>
+    <div class="trailer">
+        <video src="vedios/Disney's Mulan - Official Teaser.mp4" controls='true' autoplay='true'></video>
+        <img src="images/close.png" alt="Close" class="close">
+    </div>
+
+    
 </body>
 </html>
