Add thumb images

--- a/3 - Starbucks Landing Page/index.html
+++ b/3 - Starbucks Landing Page/index.html
@@ -32,6 +32,13 @@
             </div>
 
         </div>
+
+        <ul class="thumb">
+            <li><img src="images/thumb1.png" alt="Thumb1"></li>
+            <li><img src="images/thumb2.png" alt="Thumb2"></li>
+            <li><img src="images/thumb3.png" alt="Thumb3"></li>
+        </ul>
+
     </section>
 </body>
 </html>
