Social media icons section done

--- a/3 - Starbucks Landing Page/index.html
+++ b/3 - Starbucks Landing Page/index.html
@@ -39,6 +39,13 @@
             <li><img src="images/thumb3.png" alt="Thumb3"></li>
         </ul>
 
+        <ul class="sci">
+            <li><a href="#"><img src="images/facebook.png" alt="facebook"></a></li>
+            <li><a href="#"><img src="images/instagram.png" alt="instagram"></a></li>
+            <li><a href="#"><img src="images/twitter.png" alt="twitter"></a></li>
+
+        </ul>
+
     </section>
 </body>
 </html>
