--- a/3 - Starbucks Landing Page/index.html
+++ b/3 - Starbucks Landing Page/index.html
@@ -57,6 +57,7 @@
             document.querySelector('.starbucks').src = anything;
         }
 
+        // function for change circle color
         function changeCircleColor(color){
             const circle =document.querySelector('.circle');
             circle.style.background = color;
