--- a/3 - Starbucks Landing Page/index.html
+++ b/3 - Starbucks Landing Page/index.html
@@ -13,7 +13,8 @@
         </div>
         <header>
             <a href="#" class="logo"><img src="images/logo.png" alt="logo"></a>
-            <ul>
+            <div class="toggle" onclick="toggleMenu();"></div>
+            <ul class="navigation">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Menu</a></li>
                 <li><a href="#">What's New</a></li>
@@ -62,6 +63,15 @@
             const circle =document.querySelector('.circle');
             circle.style.background = color;
         }
+
+        // function for toggle menu
+        function toggleMenu(){
+            const menuToggle = document.querySelector('.toggle');
+            const navigation = document.querySelector('.navigation');
+            menuToggle.classList.toggle('active');
+            navigation.classList.toggle('active');
+        }
+        
 
     </script>
 
